sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var afterBlue=0
  var beforeWhite=getSize()-1
  var WhiteRed=getSize()-1
  while(afterBlue<beforeWhite){
    if (getColor(afterBlue)==BLUE){
      afterBlue=afterBlue+1
    }else if (getColor(afterBlue)==RED){
      swap(afterBlue,beforeWhite)
      beforeWhite=beforeWhite-1
    }else{
			swap(afterblue,WhiteRed)
      WhiteRed=WhiteRed-1
    }
  }
}
